	  when we hit Escape once or twice before typing them, for
	  consistency. (DLR)
	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
	  generated by Shift-Up and Shift-Down. (DLR)
  parse_escape_seq_kbinput()
	- Handle unknown and unignored escape sequences once here
	  instead of twice in parse_kbinput(). (DLR)
  display_string()
	- Properly handle buf[start_index]'s being a null terminator.
	  (DLR)
  titlebar()
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
	- Don't display any blank space for the state if we're in the
	  file browser, as Pico doesn't. (DLR)
- configure.ac:
	- If regex.h isn't found, display an error message if we try to
	  enable color support. (DLR)
	- Fix the spacing of the error message displayed when slcurses.h
	  isn't found. (DLR)
	- If we use the --disable-wrapping option, ignore the
	  --disable-wrapping-as-root option. (DLR)
	- Add minor cosmetic tweaks. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)
	- Improve highlighting of constants. (John M. Gabriele, minor
	  tweaks by DLR)

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)
	- Implement filename searches in the file browser.  New
	  functions filesearch_init(), findnextfile(),
	  findnextfile_wrap_reset(), filesearch_abort(),
	  do_filesearch(), do_fileresearch(), do_first_file(),
	  do_last_file(), do_help_void(), and do_browser_help(); changes
	  to do_browser(), parse_browser_input(), shortcut_init(),
	  do_help(), and help_init(). (DLR)
	- Open all files in binary mode for consistency and robustness.
	  Changes to load_history() and do_rcfile(). (DLR)
	- Change translator-specific comments in global.c and prompt.c